--- a/projetos/spark/projeto_spark_bcc.ipynb
+++ b/projetos/spark/projeto_spark_bcc.ipynb
@@ -173,21 +173,21 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://b2c10cc0900a:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://a5887ba83d27:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v3.4.0</code></dd>\n",
+       "                <dd><code>v3.5.0</code></dd>\n",
        "              <dt>Master</dt>\n",
        "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>Minha aplicação</code></dd>\n",
+       "                <dd><code>Meu projeto Spark</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        "
       ],
       "text/plain": [
-       "<SparkContext master=local[*] appName=Minha aplicação>"
+       "<SparkContext master=local[*] appName=Meu projeto Spark>"
       ]
      },
      "execution_count": 2,
@@ -197,6 +197,44 @@
    ],
    "source": [
     "sc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fb3854ce-0c6c-4099-b443-2eee370954db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pathlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0a51323b-f4a0-4a9f-84d5-dce46c964a6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/work/projetos/spark/aulas/22-spark/train.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"work\" / \"aulas\" / \"22-spark\" /  \"train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3dceb85-4150-4fd1-ad5b-ba4d01364d02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "work/aulas/22-spark/train.csv"
    ]
   },
   {
@@ -227,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "fe7fda56-bf06-4309-a265-26e553e20b94",
    "metadata": {
     "tags": []
@@ -246,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "900ea746-984c-405b-a449-d6cf8885525e",
    "metadata": {
     "tags": []
@@ -258,7 +296,7 @@
        "3600000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "e83f38e5-3d7b-4261-8ab3-caadb39d6076",
    "metadata": {
     "tags": []
@@ -280,16 +318,43 @@
       "text/plain": [
        "[(2,\n",
        "  'Stuning even for the non-gamer',\n",
-       "  'This sound track was beautiful! It paints the senery in your mind so well I would recomend it even to people who hate vid. game music! I have played the game Chrono Cross but out of all of the games I have ever played it has the best music! It backs away from crude keyboarding and takes a fresher step with grate guitars and soulful orchestras. It would impress anyone who cares to listen! ^_^')]"
+       "  'This sound track was beautiful! It paints the senery in your mind so well I would recomend it even to people who hate vid. game music! I have played the game Chrono Cross but out of all of the games I have ever played it has the best music! It backs away from crude keyboarding and takes a fresher step with grate guitars and soulful orchestras. It would impress anyone who cares to listen! ^_^'),\n",
+       " (2,\n",
+       "  'The best soundtrack ever to anything.',\n",
+       "  \"I'm reading a lot of reviews saying that this is the best 'game soundtrack' and I figured that I'd write a review to disagree a bit. This in my opinino is Yasunori Mitsuda's ultimate masterpiece. The music is timeless and I'm been listening to it for years now and its beauty simply refuses to fade.The price tag on this is pretty staggering I must say, but if you are going to buy any cd for this much money, this is the only one that I feel would be worth every penny.\"),\n",
+       " (2,\n",
+       "  'Amazing!',\n",
+       "  'This soundtrack is my favorite music of all time, hands down. The intense sadness of \"Prisoners of Fate\" (which means all the more if you\\'ve played the game) and the hope in \"A Distant Promise\" and \"Girl who Stole the Star\" have been an important inspiration to me personally throughout my teen years. The higher energy tracks like \"Chrono Cross ~ Time\\'s Scar~\", \"Time of the Dreamwatch\", and \"Chronomantique\" (indefinably remeniscent of Chrono Trigger) are all absolutely superb as well.This soundtrack is amazing music, probably the best of this composer\\'s work (I haven\\'t heard the Xenogears soundtrack, so I can\\'t say for sure), and even if you\\'ve never played the game, it would be worth twice the price to buy it.I wish I could give it 6 stars.'),\n",
+       " (2,\n",
+       "  'Excellent Soundtrack',\n",
+       "  \"I truly like this soundtrack and I enjoy video game music. I have played this game and most of the music on here I enjoy and it's truly relaxing and peaceful.On disk one. my favorites are Scars Of Time, Between Life and Death, Forest Of Illusion, Fortress of Ancient Dragons, Lost Fragment, and Drowned Valley.Disk Two: The Draggons, Galdorb - Home, Chronomantique, Prisoners of Fate, Gale, and my girlfriend likes ZelbessDisk Three: The best of the three. Garden Of God, Chronopolis, Fates, Jellyfish sea, Burning Orphange, Dragon's Prayer, Tower Of Stars, Dragon God, and Radical Dreamers - Unstealable Jewel.Overall, this is a excellent soundtrack and should be brought by those that like video game music.Xander Cross\"),\n",
+       " (2,\n",
+       "  'Remember, Pull Your Jaw Off The Floor After Hearing it',\n",
+       "  \"If you've played the game, you know how divine the music is! Every single song tells a story of the game, it's that good! The greatest songs are without a doubt, Chrono Cross: Time's Scar, Magical Dreamers: The Wind, The Stars, and the Sea and Radical Dreamers: Unstolen Jewel. (Translation varies) This music is perfect if you ask me, the best it can be. Yasunori Mitsuda just poured his heart on and wrote it down on paper.\"),\n",
+       " (2,\n",
+       "  'an absolute masterpiece',\n",
+       "  \"I am quite sure any of you actually taking the time to read this have played the game at least once, and heard at least a few of the tracks here. And whether you were aware of it or not, Mitsuda's music contributed greatly to the mood of every single minute of the whole game.Composed of 3 CDs and quite a few songs (I haven't an exact count), all of which are heart-rendering and impressively remarkable, this soundtrack is one I assure you you will not forget. It has everything for every listener -- from fast-paced and energetic (Dancing the Tokage or Termina Home), to slower and more haunting (Dragon God), to purely beautifully composed (Time's Scar), to even some fantastic vocals (Radical Dreamers).This is one of the best videogame soundtracks out there, and surely Mitsuda's best ever. ^_^\"),\n",
+       " (1,\n",
+       "  'Buyer beware',\n",
+       "  'This is a self-published book, and if you want to know why--read a few paragraphs! Those 5 star reviews must have been written by Ms. Haddon\\'s family and friends--or perhaps, by herself! I can\\'t imagine anyone reading the whole thing--I spent an evening with the book and a friend and we were in hysterics reading bits and pieces of it to one another. It is most definitely bad enough to be entered into some kind of a \"worst book\" contest. I can\\'t believe Amazon even sells this kind of thing. Maybe I can offer them my 8th grade term paper on \"To Kill a Mockingbird\"--a book I am quite sure Ms. Haddon never heard of. Anyway, unless you are in a mood to send a book to someone as a joke---stay far, far away from this one!'),\n",
+       " (2,\n",
+       "  'Glorious story',\n",
+       "  'I loved Whisper of the wicked saints. The story was amazing and I was pleasantly surprised at the changes in the book. I am not normaly someone who is into romance novels, but the world was raving about this book and so I bought it. I loved it !! This is a brilliant story because it is so true. This book was so wonderful that I have told all of my friends to read it. It is not a typical romance, it is so much more. Not reading this book is a crime, becuase you are missing out on a heart warming story.'),\n",
+       " (2,\n",
+       "  'A FIVE STAR BOOK',\n",
+       "  \"I just finished reading Whisper of the Wicked saints. I fell in love with the caracters. I expected an average romance read, but instead I found one of my favorite books of all time. Just when I thought I could predict the outcome I was shocked ! The writting was so descriptive that my heart broke when Julia's did and I felt as if I was there with them instead of just a distant reader. If you are a lover of romance novels then this is a must read. Don't let the cover fool you this book is spectacular!\"),\n",
+       " (2,\n",
+       "  'Whispers of the Wicked Saints',\n",
+       "  'This was a easy to read book that made me want to keep reading on and on, not easy to put down.It left me wanting to read the follow on, which I hope is coming soon. I used to read a lot but have gotten away from it. This book made me want to read again. Very enjoyable.')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd.take(1)"
+    "rdd.take(10)"
    ]
   },
   {
@@ -490,7 +555,10 @@
    "id": "f2f68949-61c8-46b4-a39e-bcfb3872c4fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -624,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
